# customs-clearance-env

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  baseline.py  dataset_generator.py  documents.py  environment.py  environment_openenv.py  graders.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
server/: app.py
